<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friend Request</string>
    <string name="title_activity_main">My Friends</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_find_friend">Find Friend</string>
    <string name="title_activity_view_friend">My Friend</string>
    <string name="title_activity_pending_friends">Pending Friends</string>
    <string name="username">Username</string>
    <string name="user_and_name">Name Or Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="search">Search</string>
    <string name="first_last_name">Firstname Lastname</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="friend_name">Friend Name</string>
    <string name="friend_message"></string>
    <string name="add_friend">Add Friends</string>
    <string name="pending_friends">Pending Friends</string>
    <string name="retype_password">Retype Password</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="remember_me">Remember Me</string>
    <string name="add">Add</string>
    <string name="newfield">New Field</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="remove_friend">Remove Friend</string>

</resources>
