<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9E00"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editBox1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:src="@drawable/fr_logo" />

    <EditText
        android:id="@+id/editBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textImeMultiLine"
        android:maxLength="30" />

    <EditText
        android:id="@+id/editBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBox1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="30" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/editBox1"
        android:onClick="logUserIn"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editBox1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:onClick="signUserUp"
        android:text="@string/sign_up" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editBox2"
        android:layout_below="@+id/editBox2"
        android:layout_marginTop="7dp"
        android:text="@string/remember_me" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox1"
        android:layout_alignTop="@+id/button2"
        android:layout_marginRight="13dp" />

</RelativeLayout>